# ai4good-sprint-starter

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/eval-critic/: SKILL.md
.claude/skills/pm-critic/: SKILL.md
app/: agent.py
data/: untangle_letters.jsonl
evals/: conftest.py  test_evals.py
slides/: index.html
